k8s/Middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: Strip-Api
  namespace: portfolio
spec:
  stripPrefix:
    prefixes:
      - /api
