k8s/backend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend
  namespace: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: dev7878/portfolio-backend:3.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /contact
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /contact
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
