k8s/deployment.yml
kind: Deployment 
apiVersion: apps/v1
metadata:
  name: admin
  namespace: portfolio

spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin 
        image: dev7878/portfolio-admin:1.0
        ports:
        - containerPort: 5001
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: 200m 
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /admin
            port: 5001
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /admin
            port: 5001
          initialDelaySeconds: 5
          periodSeconds: 10
