k8s/mysql.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: portfolio
spec:
  serviceName: mysql-svc
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: mysql-sc   
      resources:
        requests:
          storage: 1Gi
