k8s/admin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: admin-svc
  namespace: portfolio 
spec:
  type: LoadBalancer
  selector:
    app: admin
  ports:
  - port: 5001
    targetPort: 5001
