k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: portfolio
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
