k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: portfolio
spec:
  type: LoadBalancer 
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
