k8s/frontend-stable-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-canary
  namespace: portfolio
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
