k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: portfolio
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: portfolio-strip-api@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host:  'portfolio.local'
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-svc
            port: 
              number: 80

      - pathType: Prefix
        path: /api 
        backend:
          service:
            name: backend-svc
            port: 
              number: 5000

      - pathType: Prefix
        path: "/admin"  
        backend:
          service:
            name: admin-svc
            port: 
              number: 5001
